Adding custom directive for search

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <script src="app/weather/weather.module.js"></script>
   <script src="app/weather/weather.ctrl.js"></script>
 <script src="app/forecast/forecast.module.js"></script>
-
-
+<script src="app/component/component.module.js"></script>
+<script src="app/component/search.directive.js"></script>
 
 <body>
 <ng-include src="'app/layout/shell.html'"></ng-include>
