--- a/app/search/search.html
+++ b/app/search/search.html
@@ -1,3 +1,6 @@
-﻿<div>
-  Search Page
+﻿<div class="row">
+  <div class="col-md-12 search">
+    <sm-search-box></sm-search-box>
+  </div>
+
 </div>
