--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <script src="app/forecast/forecast.module.js"></script>
 <script src="app/component/component.module.js"></script>
 <script src="app/component/search.directive.js"></script>
+<script src="app/services/services.module.js"></script>
+<script src="app/services/weather.svc.js"></script>
 
 <body>
 <ng-include src="'app/layout/shell.html'"></ng-include>
