--- a/app/search/search.html
+++ b/app/search/search.html
@@ -3,4 +3,26 @@
     <sm-search-box></sm-search-box>
   </div>
 
+  <div class="row">
+    <div class="col-md-12 cities">
+      <table class="table">
+        <tbody>
+          <tr ng-repeat="city in cities">
+            <td class="col-md-1">
+              <img src="http://openweathermap.org/img/w/{{city.weather[0].icon}}.png" />
+            </td>
+            <td>
+              <b><a href="#/weather/{{city.id}}">{{city.name}}, {{city.sys.country}}</a></b>
+              <img src="http://openweathermap.org/images/flags/{{city.sys.country.toLowerCase}}.png" />
+              <b><i>{{city.weather[0].description}}</i></b>
+              <p> <span class="badge badge-info">{{(((city.main.temp-273.15) * 9)/5) + 32 | number}} C</span> </p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+
+  </div>
+
 </div>
