Adding forecast and weather controllers

--- a/app/forecast/forecast.html
+++ b/app/forecast/forecast.html
@@ -1,3 +1,21 @@
-﻿<div>
-  Forecast
+﻿<div class="row">
+  <h4>Weather Forecast for {{forecast.city.name}}, {{forecast.city.country}}</h4>
+  <div class="col-md-4 forecast-list">
+    <table class="table">
+      <tbody>
+      <tr ng-repeat="weather in forecast.list">
+        <td>{{getTime(weather.dt) | date: "dd MMM"}} <img src="http://openweathermap.org/img/w/{{weather.weather[0].icon}}.png"/></td>
+        <td>
+          <span class="label label-warning">{{weather.temp.max - 273.15 | number}} &deg;C</span>&nbsp;
+          <span class="label label-warning">{{weather.temp.min - 273.15 | number}} &deg;C</span>&nbsp;&nbsp;
+          <i>{{weather.weather[0].description}}</i>
+          <p>
+            {{weather.speed}} m/s <br/>
+            Clouds: {{weather.clouds}}%, {{weather.pressure}} hpa
+          </p>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
