--- a/app/weather/weather.html
+++ b/app/weather/weather.html
@@ -1,3 +1,57 @@
-﻿<div>
-  Weather
+﻿<div class="row">
+  <div class="col-md-11 well weather-current">
+    <div>
+      <h2>{{details.name}}, {{details.sys.country}}</h2>
+      <ul class="list-inline">
+        <li><img ng-src="http://openweathermap.org/img/w/{{details.weather[0].icon}}.png"/></li>
+        <li>
+          <h2>{{details.main.temp - 273.15 | number}} &#8451;</h2>
+        </li>
+      </ul>
+      <h4>{{details.weather[0].main}}</h4>
+      <p>As of: {{getTime(details.dt) | date: 'yyyy-MMM-dd HH:mm'}}</p>
+      <div class="col-md-4">
+        <table class="table table-striped table-bordered table-condensed">
+          <tbody>
+          <tr>
+            <td>Wind</td>
+            <td>Speed {{details.wind.speed}} m/s</td>
+          </tr>
+          <tr>
+            <td>Cloudiness</td>
+            <td>{{details.weather[0].description}}</td>
+          </tr>
+          <tr>
+            <td>Pressure</td>
+            <td>{{current.main.pressure}} hpa</td>
+          </tr>
+          <tr>
+            <td>Humidity</td>
+            <td>{{details.main.humidity}} %</td>
+          </tr>
+
+          <tr>
+            <td>Sunrise</td>
+            <td>{{getTime(details.sys.sunrise) | date: 'HH:mm'}}</td>
+          </tr>
+
+          <tr>
+            <td>Sunset</td>
+            <td>{{getTime(details.sys.sunset) | date: 'HH:mm'}}</td>
+          </tr>
+
+          <tr>
+            <td>Geo Coords</td>
+            <td>{{details.coord.lon}}, {{details.coord.lat}}</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row weather-controls">
+  <a href="#/search" class="btn btn-info">Back to Search</a>
+  <a href="#/forecast/{{details.id}}" class="btn btn-info">Show Forecast</a>
+
 </div>
