--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="app/weather/weather.module.js"></script>
   <script src="app/weather/weather.ctrl.js"></script>
 <script src="app/forecast/forecast.module.js"></script>
+<script src="app/forecast/forecast.ctrl.js"></script>
 <script src="app/component/component.module.js"></script>
 <script src="app/component/search.directive.js"></script>
 <script src="app/services/services.module.js"></script>
