--- a/app/forecast/forecast.html
+++ b/app/forecast/forecast.html
@@ -6,8 +6,8 @@
       <tr ng-repeat="weather in forecast.list">
         <td>{{getTime(weather.dt) | date: "dd MMM"}} <img src="http://openweathermap.org/img/w/{{weather.weather[0].icon}}.png"/></td>
         <td>
-          <span class="label label-warning">{{weather.temp.max - 273.15 | number}} &deg;C</span>&nbsp;
-          <span class="label label-warning">{{weather.temp.min - 273.15 | number}} &deg;C</span>&nbsp;&nbsp;
+          <span class="label label-warning">{{(((weather.temp.max - 273.15) * 9)/5) + 32 | number}} &deg;F</span>&nbsp;
+          <span class="label label-warning">{{(((weather.temp.min - 273.15) * 9)/5) + 32 | number}} &deg;F</span>&nbsp;&nbsp;
           <i>{{weather.weather[0].description}}</i>
           <p>
             {{weather.speed}} m/s <br/>
