--- a/app/search/search.html
+++ b/app/search/search.html
@@ -15,7 +15,7 @@
               <b><a href="#/weather/{{city.id}}">{{city.name}}, {{city.sys.country}}</a></b>
               <img src="http://openweathermap.org/images/flags/{{city.sys.country.toLowerCase}}.png" />
               <b><i>{{city.weather[0].description}}</i></b>
-              <p> <span class="badge badge-info">{{(((city.main.temp-273.15) * 9)/5) + 32 | number}} C</span> </p>
+              <p> <span class="badge badge-info">{{(((city.main.temp-273.15) * 9)/5) + 32 | number}} &deg;F</span> </p>
             </td>
           </tr>
         </tbody>
