Implementing chart directive using HighCharts lib

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <script src="app/component/search.directive.js"></script>
   <script src="app/services/services.module.js"></script>
   <script src="app/services/weather.svc.js"></script>
-
+  <script src="app/component/forecast.directive.js"></script>
 <body>
   <ng-include src="'app/layout/shell.html'"></ng-include>
 
